tema6/ejercicios/svc-2.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"imagina-world","namespace":"tema6-ejer1"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"imagina-world"}}}
  creationTimestamp: "2022-11-09T00:48:09Z"
  name: imagina-world
  namespace: tema6-ejer1
  resourceVersion: "3653995"
  uid: 621abc00-cafd-40ef-89e4-6c609e58f532
spec:
  clusterIP: 10.98.225.226
  clusterIPs:
  - 10.98.225.226
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32001
  selector:
    app: imagina-world
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
