tema6/ejercicios/svc2.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"imagina-world","namespace":"tema6-ejer1"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"imagina-world"}}}
  creationTimestamp: "2022-11-09T00:41:14Z"
  name: imagina-world
  namespace: tema6-ejer1
  resourceVersion: "3652850"
  uid: 564b2fd2-9652-414f-a2ed-3dbcac47f53b
spec:
  clusterIP: 10.96.144.58
  clusterIPs:
  - 10.96.144.58
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32000
  selector:
    app: imagina-world
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
